Refactor docker-compose.yml to add Zabbix server and web interface services, including necessary environment variables and volume configurations.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,26 @@
 version: '3.8'
 
 services:
+  # ------------------------------------
+  # 1. APLICAÇÃO (PHP / Back-end)
+  # ------------------------------------
   app:
+    # ... (app continua o mesmo)
     build: .
     ports:
-      - "8080:80"
+      - "8080:80" 
     volumes:
       - ./www:/var/www/html
     depends_on:
       - db
+    restart: unless-stopped
 
+  # ------------------------------------
+  # 2. BANCO DE DADOS (APENAS COM O ARQUIVO DE CORREÇÃO)
+  # ------------------------------------
   db:
     image: mysql:5.7
+    container_name: mysql-db # Dando um nome fixo
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: restaurante
@@ -20,6 +29,75 @@ services:
     volumes:
       - db_data:/var/lib/mysql
       - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+      - ./mysql.cnf:/etc/mysql/conf.d/mysql.cnf # MANTÉM A CORREÇÃO DE CHARSET
+    restart: unless-stopped
+    
+  # ------------------------------------
+  # 3. ZABBIX SERVER (Monitoramento)
+  # ------------------------------------
+  zabbix-server:
+    image: zabbix/zabbix-server-mysql:latest
+    container_name: zabbix-server-1 # Dando um nome fixo
+    depends_on:
+      - db # Dependência simples
+    environment:
+      # Essas variáveis são cruciais para a inicialização
+      MYSQL_DATABASE: restaurante
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: root
+      DB_SERVER_HOST: db # O NOME DO SERVIÇO DO BANCO DE DADOS
+      
+      # Variáveis para garantir que ele espere o DB ficar pronto
+      ZBX_STARTPOLLERS: 10
+      ZBX_STARTTRAPPERS: 5
+      ZBX_STARTPINGERS: 5
+      ZBX_DB_HOST: db # Confirma a Hostname do DB
+      ZBX_DB_PORT: 3306 # Porta padrão do MySQL
+      
+    ports:
+      - "10051:10051"
+    volumes:
+      - zabbix_server_data:/var/lib/zabbix
+    restart: unless-stopped
 
+  # ------------------------------------
+  # 4. ZABBIX WEB INTERFACE
+  # ------------------------------------
+  zabbix-web:
+    image: zabbix/zabbix-web-apache-mysql:latest
+    container_name: zabbix-web-1
+    depends_on:
+      - zabbix-server
+    environment:
+      ZBX_SERVER_HOST: zabbix-server-1 # APONTA PARA O NOME DO CONTAINER
+      ZBX_SERVER_PORT: 10051
+      # Repete as credenciais do DB
+      MYSQL_DATABASE: restaurante
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: root
+      ZBX_DB_HOST: db
+    ports:
+      - "8081:8080"
+    restart: unless-stopped
+
+  # ------------------------------------
+  # 5. GRAFANA (Visualização)
+  # ------------------------------------
+  grafana:
+    # ... (grafana continua o mesmo)
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+    restart: unless-stopped
+
+# ------------------------------------
+# DEFINIÇÃO DOS VOLUMES
+# ------------------------------------
 volumes:
   db_data:
+  zabbix_server_data:
+  grafana_data:
